...
                          }
                          showInfoModal(
                            context,
                            privacy.privacyPolicyInfo["title"] ??
                                "Privacy Policy",
                            privacy.privacyPolicyInfo["description"] ?? "",
                            'Close',
                          );
                        },
                        child: Text(
                          "Read our Privacy Policy (required)",
                          style: TextStyle(
                            fontSize: 13,
                            color: AppColors.focusedColor,
                            fontWeight: FontWeight.w500,
                            decoration: TextDecoration.underline,
                          ),
...

  Widget _buildHeader() {
    return Column(
      crossAxisAlignment: CrossAxisAlignment.start,
      children: [
        Text(
          'About You',
          style: TextStyle(
            fontSize: 30,
            fontWeight: FontWeight.bold,
            color: AppColors.textDark,
            letterSpacing: -0.5,
          ),
...
          ),
        ),

        child: _isLoading
            ? Loader(size: 20.0)
            : const Text(
                'Continue',
                style: TextStyle(fontSize: 16, letterSpacing: 0.3),
              ),
      ),
    );
  }
}
...
