import 'package:flutter/material.dart';

const List<Map<String, dynamic>> transportPreferences = [
  {'label': 'Walking', 'icon': Icons.directions_walk},
  {'label': 'Cycling', 'icon': Icons.directions_bike},
  {'label': 'Bus', 'icon': Icons.directions_bus},
  {'label': 'Car', 'icon': Icons.directions_car},
  {'label': 'Public Transport', 'icon': Icons.train},
];
